# tg_pay_bot

./: .dockerignore  .env.example  .gitignore  .kilocodeignore  .kilocoderules  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.kilo/plans/: 1775616656968-swift-island.md  1775629554052-silent-canyon.md  1775764848475-hidden-comet.md  1775846342299-brave-panda.md  payment-auto-check-plan.md
alembic/: env.py
alembic/versions/: 26bb232d826c_initial.py  add_expired_and_paid_status.py  add_is_new_field_to_users.py  add_products_table_for_subscription_products.py  add_subscription_products.py  add_subscription_type_nullable_product.py  convert_timestamps_to_with_timezone.py  create_encrypted_subscriptions_table.py  f3e8118b10a7_add_subscriptions_table.py  fix_telegram_id_type.py  increase_happ_link_field_size.py  merge_heads_timestamps_and_status.py  remove_subscription_type_from_subscriptions.py  update_subscriptions_table_with_new_fields.py
docs/: CHANGES.md  admin-guide.md  local-vs-production.md  platega-integration.md
plans/: architecture.md  database-schema.md  implementation-plan.md
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  bot.py  constants.py  keyboards.py  subscription_prices.py  texts.py
src/db/: session.py
src/handlers/: __init__.py  deposit.py  start.py  webhook.py
src/infrastructure/: __init__.py
src/models/: __init__.py  encrypted_subscription.py  payment.py  product.py  referral.py  subscription.py  user.py
src/repositories/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py
(+40 files in other folders)
